--- a/index.html
+++ b/index.html
@@ -77,15 +77,17 @@
 		</footer>
 		
 		
-		<<!-- you will need to run "node make generic" first before you can use this -->
-        <script src="../../build/generic/build/pdf.js"></script>
+		<!-- you will need to run "node make generic" first before you can use this -->
+        <script src="js/pdfjs/pdf.js"></script>
 
         <!-- These files are viewer components that you will need to get text-selection to work -->
-        <script src="../../web/ui_utils.js"></script>
-        <script src="../../web/text_layer_builder.js"></script>
+        <!--<script src="../../web/ui_utils.js"></script>
+        <script src="../../web/text_layer_builder.js"></script>-->
+        <script src="js/pdfjs/ui_utils.js" type="text/javascript"></script>
+        <script src="js/pdfjs/text-layer_builder.js" type="text/javascript"></script> 
         <!--<script src="js/ui_utils.js" type="text/javascript"></script>
         <script src="js/text-layer_builder.js" type="text/javascript"></script>-->
-        <script src="js/minimal.js" type="text/javascript"></script>
+        <script src="js/NOVAXML.js" type="text/javascript"></script>
         <!--<script src="js/NOVAXML.js" type="text/javascript"></script>
 		<script src="js/demo.js" type="text/javascript"></script>
 		<!--script src="js/AutoClearInput.js" type="text/javascript"></script-->
